# assistant-director

./: .dockerignore  .gitignore  .instructions.md  .pre-commit-config.yaml  COPILOT_SETUP.md  NETWORK_SETUP_INSTRUCTIONS.md  README.md  copilot-instructions.md  docker-compose.prod.yml  docker-compose.yml  netlify.toml  package-lock.json  package.json  render.yaml
.cursor/commands/: leancode-refactor.md  onboard.md  pr-prep.md
.cursor/rules/: 00-core-principles.mdc  10-planning-design.mdc  20-backendapi-database.mdc  30-developer-tests.mdc  40-frontend.mdc  50-observability.mdc  60-cli-tooling.mdc  70-documentation.mdc
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260213_0001_initial_schema.py  20260215_0002_drop_script_artifacts.py
backend/src/assistant_director_api/: __init__.py  config.py  deps.py  main.py  schemas.py
backend/src/assistant_director_api/db/: models.py  session.py
backend/src/assistant_director_api/routers/: projects.py  scenes.py  scripts.py  sync.py  users.py
backend/src/assistant_director_api/services/: blob_store.py  sp_screenplay.py
backend/tests/: conftest.py  test_api_integration.py  test_config.py  test_schemas_users.py  test_smoke.py  test_sp_screenplay.py
frontend/: .env.example  App.tsx  app.config.js  app.json  eas.json  metro.config.js  package.json  vitest.config.ts  vitest.setup.ts
frontend/android/: settings.gradle
frontend/vitest-shims/: react-native-safe-area-context.tsx  (+1 more)
site/: index.html
(+49 files in other folders)
