[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-director-api"
version = "0.1.0"
description = "Assistant Director HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.38",
  "psycopg[binary]==3.2.13",
  "alembic==1.14.1",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.9.3",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
# Start with Pyflakes only; expand (E, I, UP) when the codebase is brought in line.
select = ["F"]
